[package]
name        = "pact-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The `pact` command-line interface — entry point for the Pact toolchain."

[[bin]]
name = "pact"
path = "src/main.rs"

# ---------------------------------------------------------------------------
# Features
# ---------------------------------------------------------------------------
[features]
# Include LSP server support (enabled by default; disable for minimal builds).
default = ["lsp"]
lsp     = ["dep:pact-lsp"]

[dependencies]
pact-compiler.workspace    = true
pact-interpreter.workspace = true
pact-lsp                   = { workspace = true, optional = true }
pact-fmt.workspace         = true
pact-diagnostic.workspace  = true

anyhow.workspace = true
clap.workspace   = true

tracing.workspace            = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates           = "3"

[lints]
workspace = true
