[package]
name        = "pact-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The `pact` command-line interface — entry point for the Pact toolchain."

[[bin]]
name = "pact"
path = "src/main.rs"

# ---------------------------------------------------------------------------
# Features
# ---------------------------------------------------------------------------
[features]
# Enable ANSI colour codes in tracing output (disable for embedded / CI environments).
default = ["ansi"]
ansi    = ["tracing-subscriber/ansi"]

[dependencies]
anyhow.workspace = true
clap.workspace   = true

tracing.workspace            = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace   = true
predicates.workspace   = true
tempfile.workspace     = true
pact-compiler.workspace = true

[lints]
workspace = true
